gcc/testsuite/gdc.test/compilable/imports/test63a.d
module imports.test63a;

private import test63;

struct s {

    char a[ SIZE ];

}

