gcc/testsuite/gdc.test/fail_compilation/imports/a10169.d
module imports.a10169;

struct B
{
    private int x;
}
